style.css
/* ... */
@media only screen 
  and (min-device-width: 220px) 
  and (max-device-width: 680px)
  and (-webkit-min-device-pixel-ratio: 2){
  .about-container {
    flex-direction: column;
    background-color: rgb(0 0 0/10%);


  }

  .image-container {
    padding: 0;
    margin: 1em;


  }

  .image-container h2 {
    text-align: center;
  }

  .title-group h1 {
    font-size: 55px;
  }

  .text-box {
    width: 60%;
  }

  #project h1 {
    text-align: center;
    font-size: 60px;
  }

  #contact h1 {
    text-align: center;
    font-size: 60px;
  }

  .social-icons {

    text-align: center;
    display: flex;
    flex-direction: column;
  }

  .social-icons i {
    padding-top: 0.5em;
    margin: 0;

  }

  #nav {
    display: none;
  }





  /*phone nav */




  #toggle {
    display: none;
  }

  /**
  Hamburger
**/
  .hamburger {
    position: fixed;
    top: 4em;
    left: 15%;
    margin-left: -2em;
    margin-top: -45px;
    width: 2em;
    height: 45px;
    z-index: 5;
  }

  .hamburger div {
    position: relative;
    width: 3em;
    height: 7px;
    border-radius: 3px;
    background-color: #f8982b;
    margin-top: 8px;
    transition: all 0.3s ease-in-out;
  }

  /**
Nav Styles
**/
  .nav {
    position: fixed;
    width: 70%;
    height: 100%;
    background-color: #020202;
    top: -100%;
    
    right: 0;
    bottom: 0;
    overflow: hidden;
    transition: all 0.3s ease-in-out;
    transform: scale(0);
  }

  .nav-wrapper {
    position: relative;
    overflow: hidden;
    overflow-y: auto;
    height: 100%;
  }

  nav {
    text-align: left;
    margin-left: 10%;
    background-color: #000;
  }

  nav a {
    position: relative;
    text-decoration: none;
    color: #6c63ff;
    font-size: 2em;
    display: inline-block ;
    margin-top: 1.25em;
    transition: color 0.2s ease-in-out;
    letter-spacing: 1px;
  }

  nav a:before {
    content: '';
    height: 0;
    position: absolute;
    width: 0.25em;
    background-color: #ff2d2d;
    left: -0.5em;
    transition: all 0.2s ease-in-out;
  }

  nav a:hover {
    color: rgb(150, 65, 255);
  }

  nav a:hover:before {
    height: 100%;
  }

  /**
Animations
**/
  #toggle:checked+.hamburger .top-bun {
    transform: rotate(-45deg);
    margin-top: 25px;
  }

  #toggle:checked+.hamburger .bottom-bun {
    opacity: 0;
    transform: rotate(45deg);
  }

  #toggle:checked+.hamburger .meat {
    transform: rotate(45deg);
    margin-top: -7px;
  }

  #toggle:checked+.hamburger+.nav {
    top: 0;
    transform: scale(1);
  }



}

/*phone nav none */
.display{
  position: absolute !important;
  top: -9999px !important;
  left: -9999px !important;
}
/*phone nav none */

